<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/edt_edit_student_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/ch_nh_s_a_t_n_sinh_vi_n"
        android:inputType="textPersonName"
        android:padding="8dp" />

    <EditText
        android:id="@+id/edt_edit_student_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/ch_nh_s_a_m_sinh_vi_n"
        android:inputType="text"
        android:padding="8dp"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btn_confirm_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c_p_nh_t"
        android:layout_marginTop="16dp" />
</LinearLayout>
